[tool.poetry]
name = "pep634regex"
version = "0.1.0"
license = "ISC"
description = ""
authors = ["hab <_@habnab.it>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
hypothesis = "^5.41.1"
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
